# dr-nexus

./: .env.example  .env.local.example  .gitignore  .vercelignore  CI_CD_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MEDICAL_ANALYSIS_REPORT.md  MedicalDashboard.tsx  NEXT_STEPS.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  VERCEL_SECRET_SETUP.md  VERCEL_TOKEN_SETUP_COMPLETE.md  lighthouserc.json  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
.claude/: settings.local.json
.github/: CICD.md  SETUP_SECRETS.md
.github/workflows/: codeql.yml  deploy.yml  nextjs-ci.yml  python-ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/actions/: page.tsx
app/conditions/: page.tsx
app/devices/: page.tsx
app/documents/: page.tsx
app/labs/: page.tsx
app/medications/: page.tsx
app/timeline/: page.tsx
components/layout/: DashboardLayout.tsx
components/search/: GlobalSearch.tsx
components/ui/: badge.tsx  card.tsx
components/visualizations/: ActionItemsPanel.tsx  ConditionsTracker.tsx  DeviceTracker.tsx  InteractiveTimeline.tsx  LabResultsChart.tsx
config/: schema.json
dr_nexus/: __init__.py  cli.py
dr_nexus/analysis/: __init__.py  ultrathink.py
dr_nexus/extractors/: __init__.py  timeline_builder.py
dr_nexus/ingestors/: __init__.py  base.py  ccda_ingestor.py  fhir_ingestor.py
dr_nexus/knowledge_base/: __init__.py  (+3 more)
scripts/: add-vercel-token.ps1  configure-vercel-secret.ps1  initial_build.py  setup-github-secrets.sh
supabase/: schema.sql
tests/: __init__.py  conftest.py
(+16 files in other folders)
