[tool.poetry]
name = "dr-nexus"
version = "1.0.0"
description = "Medical Knowledge Base Builder for longitudinal patient data analysis"
authors = ["Dr. Nexus System"]
readme = "README.md"
packages = [{include = "dr_nexus"}]

[tool.poetry.dependencies]
python = "^3.11"

# Data Parsing
fhir-resources = "^7.1.0"
lxml = "^5.1.0"
pdfplumber = "^0.10.0"
python-hl7 = "^0.4.5"
Pillow = "^10.2.0"

# Data Processing
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
jsonschema = "^4.20.0"
pandas = "^2.1.0"
python-dateutil = "^2.8.2"

# LLM Integration
anthropic = "^0.39.0"

# CLI & Utilities
click = "^8.1.7"
python-dotenv = "^1.0.0"
tqdm = "^4.66.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.92.0"
freezegun = "^1.4.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
ipython = "^8.18.0"

[tool.poetry.scripts]
dr-nexus = "dr_nexus.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=dr_nexus --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
